# django-rubbie

./: LICENSE  PRD.md  pyproject.toml
rubbie/: apps.py
rubbie/dashboard/: model.py
scripts/: run-test-server.sh
test_project/: manage.py  settings.py  urls.py
tests/project/: manage.py  settings.py
tests/project/blog/: admin.py  apps.py  models.py
tests/project/blog/migrations/: 0001_initial.py
web/: components.json  package.json  pnpm-lock.yaml  tailwind.config.js
web/src/: App.vue
web/src/api/: client.ts
web/src/components/layout/: AppSidebar.vue
web/src/router/: index.ts
web/src/views/: Dashboard.vue
