[project]
name = "django-rubbie"
version = "0.1.0"
description = "A better backend development kit"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.2",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.12.0",
    "typing-extensions>=4.15.0",
]

[tool.basedpyright]
venv = ".venv"
venvPath = "."
reportMissingTypeStubs = false
reportUnusedCallResult = false
reportUnknownMemberType = false
reportAny = false
reportImplicitOverride = false
reportUnknownArgumentType = false
reportUnannotatedClassAttribute = false
reportIncompatibleVariableOverride = false
reportUnknownVariableType = false
reportMissingTypeArgument = false
reportUninitializedInstanceVariable = false
reportUnnecessaryIsInstance = false
reportImportCycles = "hint"

[dependency-groups]
dev = [
    "basedpyright>=1.31.6",
    "django-stubs[compatible-mypy]>=5.2.7",
    # "djangorestframework-stubs[compatible-mypy]>=3.16.4",
    "ipython>=9.6.0",
    "typer>=0.19.2",
]
